--- a/index.html
+++ b/index.html
@@ -149,7 +149,18 @@
 
   <!-- Main Section -->
   <main class="md:container mx-auto">
-
+    <section>
+      <div class="flex flex-col gap-2 justify-center items-center mt-12">
+        <h1 class="text-2xl font-bold">Fetured Bikes In This Year</h1>
+        <p>Best bike collection</p>
+      </div>
+      <div class=" flex flex-col lg:flex-row md:gap-6 justify-center items-center mt-10">
+          <img src="./images/slider/bike4.png" alt="">
+          <img src="./images/slider/bike4.png" alt="">
+          <img src="./images/slider/bike4.png" alt="">
+      </div>
+    </section>
+    
   </main>
 
   <!-- Footer Section  -->
