Footer section done

--- a/index.html
+++ b/index.html
@@ -358,7 +358,33 @@
   </main>
 
   <!-- Footer Section  -->
-  <footer></footer>
+  <footer class=" bg-black mt-24">
+    <div class=" footer flex flex-col md:flex-row justify-between items-center text-base-content  text-white md:container mx-auto p-20">
+      <nav class="flex flex-col gap-6">
+        <div class="flex gap-10">
+          <h1 class="text-white text-xl">Services</h1>
+          <h1 class="text-white text-xl">License</h1>
+        </div>
+        <div class="flex flex-wrap gap-4">
+          <a class="link link-hover">About</a>
+          <a class="link link-hover">Features</a>
+          <a class="link link-hover">Pricing</a>
+          <a class="link link-hover">Careers</a>
+          <a class="link link-hover">Help</a>
+          <a class="link link-hover">Privacy Policy</a>
+        </div>
+        <div>
+          <p class="font-medium text-md ">© 2020 bike. All rights reserved</p>
+        </div>
+      </nav>
+      <!-- footer logo  -->
+      <nav class="flex flex-col gap-8 w-full md:w-72">
+        <h1 class="text-white text-xl">Get the App</h1>
+        <img class="w-full" src="./images/others/ios.png" alt="">
+        <img class="w-full" src="./images/others/android.png" alt="">
+      </nav>
+    </div>
+  </footer>
 </body>
 <script src="https://kit.fontawesome.com/340c0de332.js" crossorigin="anonymous"></script>
 </html>
